--- a/planos.html
+++ b/planos.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Academia SIGMA</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Planos - SIGMA</title>
+    <link rel="stylesheet" href="planos.css">
 </head>
 <body>
     <header class="cabecalho">
         <nav class="cabecalho-menu">   
                 <img class="cabecalho-menu-logo" src="./images/logoAcademia.png" >      
                 <a class="cabecalho-menu-link" href="index.html">Inicio</a>
-                <a class="cabecalho-menu-link" href="planos.html">Planos</a>
+                <a class="cabecalho-menu-link" href="#">Planos</a>
                 <a class="cabecalho-menu-link" href="#">Modalidades</a>
                 <a class="cabecalho-menu-link" href="#">Contato</a>
                 <a class="cabecalho-menu-link" href="#">Calcular IMC</a>
@@ -20,19 +20,21 @@
                 
             </nav>
     </header>
+
     <main>
-        <section class="banner">
-            <div class="banner-conteudo">
-                <img class="banner-imagem" src="./images/Design sem nome (1).png">  
-                <p class="banner-texto">Mais que uma academia, um <strong class="banner-strong">centro de treinamento</strong> com as melhores máquinas do mundo, tendo a <strong class="banner-strong">maior diversidade de máquinas do Brasil.</strong><br/>
-                Junto dos <strong class="banner-strong">melhores especialistas</strong> e dos profissionais mais capacitados.</p> 
-                <img class="banner-logo" src="./images/logoAcademia.png" > 
-                <a class="banner-botao" href="#">Iniciar jornada</a>  
+        <h1 class="titulo-plano"> PLANOS</h1>
+        <section class="plano-container">
+            <div class="plano-frango">
+                <p class="plano-titulo">PLANO <span>FRANGO</span></p>
+                <p class="fidelidade">sem fidelidade*</p>
+                <p>Sem multas ou taxas de cancelamento</p>
+                <p>Acesso total a estrutura da academia</p>
+                <p>Sem restrição de horarios</p>
+                <h1>R$ 120,00</h1>
+                <p>por mês</p>
+                <a href="#">Matricule-se</a>
             </div>
         </section>
-        
-
     </main>
-
 </body>
 </html>
